# neuro_symbolic_emulator

./: Cargo.toml  cpu_architecture.md  gate_weights.json  initial_plan.md  iteration_2.md  iteration_3.md  iteration_4.md  iteration_5.md  manifest.json  notes.md  program.json  rules.md
assets/fus/: alu_adder.json  alu_bitwise.json  alu_compare.json
assets/manifests/: standard_cpu.json
scripts/: visualize_weights.py
src/: bus.rs  fu.rs  gui.rs  lib.rs  loader.rs  main.rs  register.rs  system.rs  voter.rs
src/legacy/: circuit.rs  gate.rs
