[package]
name = "neuro_symbolic_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
egui = "0.24"
eframe = "0.24"
[dev-dependencies]
proptest = "1.0"
